Modify docker file tipo

--- a/apps/auth-service/Dockerfile
+++ b/apps/auth-service/Dockerfile
@@ -6,11 +6,11 @@ RUN pnpm install
 
 FROM base AS development
 COPY . .
-CMD ["pnpm", "run", "start:dev", "auth-serivice"]
+CMD ["pnpm", "run", "start:dev", "auth-service"]
 
 FROM base AS build
 COPY . .
-RUN pnpm run build auth-serivice
+RUN pnpm run build auth-service
 
 FROM node:20-alpine AS production
 WORKDIR /app
